media: Use associated interface for ContentDecryptionModuleClient

The EME spec requires the order of some events. For example, after
update() [1], we should "run the Update Expiration algorithm on the
session, providing expiration time", then "resolve promise with true".
The former is part of the ContentDecryptionModuleClient interface,
while the latter is a callback on the ContentDecryptionModule interface.
To preserve the order, this CL uses associated interface [2] to ensure
message ordering.

[1] https://w3c.github.io/encrypted-media/#dom-mediakeysession-update
[2] //src/mojo/public/cpp/bindings/README.md#Associated-Interfaces

Bug: 869550
Test: CDM_10/ECKEncryptedMediaTest.MessageTypeTest/0 working, see Bug
Change-Id: I1afd1657581f83347235357fb26972a6ba657f1c
Reviewed-on: https://chromium-review.googlesource.com/1162309
Reviewed-by: Frank Liberato <liberato@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Xiaohan Wang <xhwang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580620}
Former-commit-id: 34aa788bb5a7f378f709a9662dab96927710d036