media/mojo/services/mojo_cdm_service.h
@@ -52,7 +52,8 @@ class MEDIA_MOJO_EXPORT MojoCdmService : public mojom::ContentDecryptionModule {
   ~MojoCdmService() final;
 
   // mojom::ContentDecryptionModule implementation.
-  void SetClient(mojom::ContentDecryptionModuleClientPtr client) final;
+  void SetClient(
+      mojom::ContentDecryptionModuleClientAssociatedPtrInfo client) final;
   void Initialize(const std::string& key_system,
                   const url::Origin& security_origin,
                   const CdmConfig& cdm_config,
@@ -112,7 +113,7 @@ class MEDIA_MOJO_EXPORT MojoCdmService : public mojom::ContentDecryptionModule {
   // Set to a valid CDM ID if the |cdm_| is successfully created.
   int cdm_id_;
 
-  mojom::ContentDecryptionModuleClientPtr client_;
+  mojom::ContentDecryptionModuleClientAssociatedPtr client_;
 
   base::WeakPtr<MojoCdmService> weak_this_;
   base::WeakPtrFactory<MojoCdmService> weak_factory_;
